--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
         classpath "org.grails.plugins:hibernate5:7.2.2"
-        classpath "org.grails.plugins:views-gradle:2.2.1"
+        classpath "org.grails.plugins:views-gradle:2.3.0"
     }
 }
 
@@ -53,8 +53,8 @@ dependencies {
     implementation "org.grails.plugins:hibernate5"
     implementation "org.hibernate:hibernate-core:5.6.5.Final"
     implementation "org.grails.plugins:events"
-    implementation "org.grails.plugins:views-json"
-    implementation "org.grails.plugins:views-json-templates"
+    implementation "org.grails.plugins:views-json:2.3.0"
+    implementation "org.grails.plugins:views-json-templates:2.3.0"
     profile "org.grails.profiles:rest-api"
     runtimeOnly "org.glassfish.web:el-impl:2.2.1-b05"
     runtimeOnly "com.h2database:h2"
